--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,11 @@
 <p>メッセージ一覧</p>
 <%= link_to "登録画面へ", new_message_path %>
 <% @messages.each do |message| %>
-  <p><%= message.title %></p>
+
+  <p>
+    <%= message.title %>
+    <%= link_to "詳細", message_path(message.id) %>
+    <%= link_to "編集", edit_message_path(message.id) %>
+    <%= link_to "削除", message_path(message.id), method: :delete, data: {confirm: "削除しますか？"} %>
+  </p>
 <% end %>
