--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,34 @@ a {
 a:hover {
     text-decoration: underline;
 }
+// flash
+.alert-notice{
+    @extend .alert-success;
+}
+
+.alert-alert{
+    @extend .alert-danger;
+}
+// tasks#new
+.form-group{
+    width: 400px;
+    border: solid 3px skyblue;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    padding: 30px;
+    h1{
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    p:last-child{
+        text-align: center;
+    }
+    .btn{
+        margin-top: 5px;
+    }
+}
+
+.formlow-link{
+    text-align: center;
+}
